--- a/com.opcoach.e4.contextExplorer/build.properties
+++ b/com.opcoach.e4.contextExplorer/build.properties
@@ -2,7 +2,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               Application.e4xmi,\
                icons/,\
-               css/default.css
+               fragment.e4xmi
 source.. = src/
